# knowledge-graph

./: .gitignore  .mcp.json  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GUARDRAILS.md  MIGRATION.md  README.md  RUNBOOK.md  TESTING.md  compound-engineering.local.md  eslint.config.mjs  llms.txt  package-lock.json  package.json  swift-ingestion-gaps.md  type-resolution-roadmap.md  type-resolution-system.md
.claude-plugin/: marketplace.json
.cursor/: index.mdc
.cursor/rules/: 100-monorepo.mdc  200-eval.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-e2e.yml  ci-quality.yml  ci-report.yml  ci-tests.yml  ci.yml  publish.yml
.sisyphus/drafts/: gitnexus-brainstorming.md  noodlbox-comparison.md
eval/: README.md  pyproject.toml
eval/configs/modes/: baseline.yaml  native.yaml  native_augment.yaml
gitnexus/: package-lock.json
gitnexus-web/: package-lock.json  package.json
knowledge-graph/: CHANGELOG.md  README.md  package-lock.json  package.json
knowledge-graph-claude-plugin/.claude-plugin/: plugin.json
knowledge-graph-claude-plugin/hooks/: hooks.json  knowledge-graph-hook.js
knowledge-graph-shared/: package-lock.json  package.json
knowledge-graph-shared/src/: mro-strategy.ts
knowledge-graph-web/: package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts  vitest.config.ts
knowledge-graph-web/e2e/: heartbeat-reconnect.spec.ts  multi-repo-scoping.spec.ts  onboarding.spec.ts  (+2 more)
scripts/: reindex.sh
(+231 files in other folders)
