[project]
name = "knowledge-graph-swebench-eval"
version = "0.1.0"
description = "SWE-bench evaluation harness with Knowledge-Graph code intelligence integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mini-swe-agent>=2.0.0",
    "litellm>=1.83.0",
    "datasets>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.2.2",
    # Security pins for transitives
    "aiohttp>=3.13.4",
    "Pygments>=2.20.0",
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.5.0",
    "hypothesis>=6.88.0",
    "coverage>=7.6.0",
]

[project.scripts]
knowledge-graph-eval = "run_eval:app"
knowledge-graph-eval-analyze = "analysis.analyze_results:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "environments", "analysis", "bridge", "utils"]
extra-files = ["run_eval.py", "tool_registry.py", "constants.py"]

[tool.ruff]
line-length = 120
target-version = "py311"
